src/main/java/de/mrvnndr/skadi/analysis/SkadiParser.java
package de.mrvnndr.skadi.analysis;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SkadiParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            ACTION_END = 1, BACKSLASH = 2, BRACKET_CLOSED = 3, BRACKET_OPEN = 4, CHAR = 5, CH_a = 6,
            CH_b = 7, CH_c = 8, CH_d = 9, CH_e = 10, CH_f = 11, CH_n = 12, CH_r = 13, CH_s = 14, CH_t = 15,
            CH_v = 16, CH_w = 17, CH_x = 18, CH_A = 19, CH_B = 20, CH_C = 21, CH_D = 22, CH_E = 23,
            CH_F = 24, CH_S = 25, CH_W = 26, CIRCUMFLEX = 27, COLON = 28, COMMA = 29, COMMENT = 30,
            CURLY_CLOSED = 31, CURLY_OPEN = 32, DASH = 33, DOLLAR = 34, DOT = 35, HOST_CODE = 36,
            NAME = 37, NON_ZERO_DIGIT = 38, PAREN_CLOSED = 39, PAREN_OPEN = 40, PATTERN_CHAR = 41,
            PLUS = 42, QUESTION_MARK = 43, REGEX_END = 44, SECTION_SEP = 45, STAR = 46, UNDERLINE = 47,
            VERT_BAR = 48, ZERO = 49, DEF_WS_NB = 50, DEF_CODE_START = 51, DEF_NEW_LINE = 52,
            IC_NEW_LINE = 53, UC_END = 54, ED_WS = 55, EA_PERC_CURLY = 56, EA_CURLY = 57, REGEX_RULES_WS_NB = 58,
            REGEX_RULES_CODE_START = 59, REGEX_RULES_NEW_LINE = 60, NC_END = 61, REGEX_a = 62,
            REGEX_b = 63, REGEX_c = 64, REGEX_d = 65, REGEX_e = 66, REGEX_f = 67, REGEX_n = 68,
            REGEX_r = 69, REGEX_s = 70, REGEX_t = 71, REGEX_v = 72, REGEX_w = 73, REGEX_x = 74,
            REGEX_A = 75, REGEX_B = 76, REGEX_C = 77, REGEX_D = 78, REGEX_E = 79, REGEX_F = 80,
            REGEX_S = 81, REGEX_W = 82, REGEX_PAREN_OPEN = 83, REGEX_PAREN_CLOSED = 84, REGEX_BRACKET_OPEN = 85,
            REGEX_BRACKET_CLOSED = 86, REGEX_CIRCUMFLEX = 87, REGEX_DASH = 88, REGEX_UNDERLINE = 89,
            REGEX_STAR = 90, REGEX_BACKSLASH = 91, REGEX_DOT = 92, REGEX_COMMA = 93, REGEX_DOLLAR = 94,
            REGEX_PLUS = 95, REGEX_COLON = 96, REGEX_QUESTION_MARK = 97, REGEX_VERT_BAR = 98;
    public static final int
            RULE_file = 0, RULE_definitions_section = 1, RULE_definition = 2, RULE_rules = 3,
            RULE_rule = 4, RULE_user_code = 5, RULE_regex = 6, RULE_inner_regex = 7,
            RULE_alternative = 8, RULE_term = 9, RULE_assertion = 10, RULE_quantifier = 11,
            RULE_quantifier_prefix = 12, RULE_atom = 13, RULE_atom_escape = 14, RULE_character_escape = 15,
            RULE_control_escape = 16, RULE_control_letter = 17, RULE_identity_escape = 18,
            RULE_decimal_escape = 19, RULE_hex_escape_sequence = 20, RULE_hex_digit = 21,
            RULE_character_class_escape = 22, RULE_character_class = 23, RULE_class_ranges = 24,
            RULE_non_empty_class_ranges = 25, RULE_non_empty_class_ranges_no_dash = 26,
            RULE_class_atom = 27, RULE_class_atom_no_dash = 28, RULE_class_escape = 29,
            RULE_rule_reference = 30, RULE_rule_name = 31, RULE_pattern_char = 32,
            RULE_digit = 33, RULE_char = 34;

    private static String[] makeRuleNames() {
        return new String[]{
                "file", "definitions_section", "definition", "rules", "rule", "user_code",
                "regex", "inner_regex", "alternative", "term", "assertion", "quantifier",
                "quantifier_prefix", "atom", "atom_escape", "character_escape", "control_escape",
                "control_letter", "identity_escape", "decimal_escape", "hex_escape_sequence",
                "hex_digit", "character_class_escape", "character_class", "class_ranges",
                "non_empty_class_ranges", "non_empty_class_ranges_no_dash", "class_atom",
                "class_atom_no_dash", "class_escape", "rule_reference", "rule_name",
                "pattern_char", "digit", "char"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, "'%{'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "ACTION_END", "BACKSLASH", "BRACKET_CLOSED", "BRACKET_OPEN", "CHAR",
                "CH_a", "CH_b", "CH_c", "CH_d", "CH_e", "CH_f", "CH_n", "CH_r", "CH_s",
                "CH_t", "CH_v", "CH_w", "CH_x", "CH_A", "CH_B", "CH_C", "CH_D", "CH_E",
                "CH_F", "CH_S", "CH_W", "CIRCUMFLEX", "COLON", "COMMA", "COMMENT", "CURLY_CLOSED",
                "CURLY_OPEN", "DASH", "DOLLAR", "DOT", "HOST_CODE", "NAME", "NON_ZERO_DIGIT",
                "PAREN_CLOSED", "PAREN_OPEN", "PATTERN_CHAR", "PLUS", "QUESTION_MARK",
                "REGEX_END", "SECTION_SEP", "STAR", "UNDERLINE", "VERT_BAR", "ZERO",
                "DEF_WS_NB", "DEF_CODE_START", "DEF_NEW_LINE", "IC_NEW_LINE", "UC_END",
                "ED_WS", "EA_PERC_CURLY", "EA_CURLY", "REGEX_RULES_WS_NB", "REGEX_RULES_CODE_START",
                "REGEX_RULES_NEW_LINE", "NC_END", "REGEX_a", "REGEX_b", "REGEX_c", "REGEX_d",
                "REGEX_e", "REGEX_f", "REGEX_n", "REGEX_r", "REGEX_s", "REGEX_t", "REGEX_v",
                "REGEX_w", "REGEX_x", "REGEX_A", "REGEX_B", "REGEX_C", "REGEX_D", "REGEX_E",
                "REGEX_F", "REGEX_S", "REGEX_W", "REGEX_PAREN_OPEN", "REGEX_PAREN_CLOSED",
                "REGEX_BRACKET_OPEN", "REGEX_BRACKET_CLOSED", "REGEX_CIRCUMFLEX", "REGEX_DASH",
                "REGEX_UNDERLINE", "REGEX_STAR", "REGEX_BACKSLASH", "REGEX_DOT", "REGEX_COMMA",
                "REGEX_DOLLAR", "REGEX_PLUS", "REGEX_COLON", "REGEX_QUESTION_MARK", "REGEX_VERT_BAR"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SkadiParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public SkadiParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FileContext extends ParserRuleContext {
        public Definitions_sectionContext definitions_section() {
            return getRuleContext(Definitions_sectionContext.class, 0);
        }

        public List<TerminalNode> SECTION_SEP() {
            return getTokens(SkadiParser.SECTION_SEP);
        }

        public TerminalNode SECTION_SEP(int i) {
            return getToken(SkadiParser.SECTION_SEP, i);
        }

        public RulesContext rules() {
            return getRuleContext(RulesContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(SkadiParser.EOF, 0);
        }

        public User_codeContext user_code() {
            return getRuleContext(User_codeContext.class, 0);
        }

        public FileContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_file;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitFile(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FileContext file() throws RecognitionException {
        FileContext _localctx = new FileContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_file);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(70);
                definitions_section();
                setState(71);
                match(SECTION_SEP);
                setState(72);
                rules();
                setState(75);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SECTION_SEP) {
                    {
                        setState(73);
                        match(SECTION_SEP);
                        setState(74);
                        user_code();
                    }
                }

                setState(77);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Definitions_sectionContext extends ParserRuleContext {
        public List<TerminalNode> HOST_CODE() {
            return getTokens(SkadiParser.HOST_CODE);
        }

        public TerminalNode HOST_CODE(int i) {
            return getToken(SkadiParser.HOST_CODE, i);
        }

        public List<TerminalNode> COMMENT() {
            return getTokens(SkadiParser.COMMENT);
        }

        public TerminalNode COMMENT(int i) {
            return getToken(SkadiParser.COMMENT, i);
        }

        public List<DefinitionContext> definition() {
            return getRuleContexts(DefinitionContext.class);
        }

        public DefinitionContext definition(int i) {
            return getRuleContext(DefinitionContext.class, i);
        }

        public Definitions_sectionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_definitions_section;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitDefinitions_section(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Definitions_sectionContext definitions_section() throws RecognitionException {
        Definitions_sectionContext _localctx = new Definitions_sectionContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_definitions_section);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 207232172032L) != 0)) {
                    {
                        setState(82);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case HOST_CODE: {
                                setState(79);
                                match(HOST_CODE);
                            }
                            break;
                            case COMMENT: {
                                setState(80);
                                match(COMMENT);
                            }
                            break;
                            case NAME: {
                                setState(81);
                                definition();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(86);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DefinitionContext extends ParserRuleContext {
        public TerminalNode NAME() {
            return getToken(SkadiParser.NAME, 0);
        }

        public RegexContext regex() {
            return getRuleContext(RegexContext.class, 0);
        }

        public DefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_definition;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitDefinition(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DefinitionContext definition() throws RecognitionException {
        DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_definition);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(87);
                match(NAME);
                setState(88);
                regex();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RulesContext extends ParserRuleContext {
        public List<RuleContext> rule_() {
            return getRuleContexts(RuleContext.class);
        }

        public RuleContext rule_(int i) {
            return getRuleContext(RuleContext.class, i);
        }

        public List<TerminalNode> COMMENT() {
            return getTokens(SkadiParser.COMMENT);
        }

        public TerminalNode COMMENT(int i) {
            return getToken(SkadiParser.COMMENT, i);
        }

        public List<TerminalNode> HOST_CODE() {
            return getTokens(SkadiParser.HOST_CODE);
        }

        public TerminalNode HOST_CODE(int i) {
            return getToken(SkadiParser.HOST_CODE, i);
        }

        public RulesContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rules;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitRules(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RulesContext rules() throws RecognitionException {
        RulesContext _localctx = new RulesContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_rules);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(93);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMENT || _la == HOST_CODE) {
                    {
                        {
                            setState(90);
                            _la = _input.LA(1);
                            if (!(_la == COMMENT || _la == HOST_CODE)) {
                                _errHandler.recoverInline(this);
                            } else {
                                if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(95);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(96);
                rule_();
                setState(101);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 865648511025140L) != 0)) {
                    {
                        setState(99);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case BACKSLASH:
                            case BRACKET_OPEN:
                            case CHAR:
                            case CH_a:
                            case CH_b:
                            case CH_c:
                            case CH_d:
                            case CH_e:
                            case CH_f:
                            case CH_n:
                            case CH_r:
                            case CH_s:
                            case CH_t:
                            case CH_v:
                            case CH_w:
                            case CH_x:
                            case CH_A:
                            case CH_B:
                            case CH_C:
                            case CH_D:
                            case CH_E:
                            case CH_F:
                            case CH_S:
                            case CH_W:
                            case CIRCUMFLEX:
                            case COLON:
                            case COMMA:
                            case CURLY_OPEN:
                            case DOLLAR:
                            case DOT:
                            case NON_ZERO_DIGIT:
                            case PAREN_OPEN:
                            case PATTERN_CHAR:
                            case REGEX_END:
                            case VERT_BAR:
                            case ZERO: {
                                setState(97);
                                rule_();
                            }
                            break;
                            case COMMENT: {
                                setState(98);
                                match(COMMENT);
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(103);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RuleContext extends ParserRuleContext {
        public RegexContext regex() {
            return getRuleContext(RegexContext.class, 0);
        }

        public TerminalNode ACTION_END() {
            return getToken(SkadiParser.ACTION_END, 0);
        }

        public List<TerminalNode> HOST_CODE() {
            return getTokens(SkadiParser.HOST_CODE);
        }

        public TerminalNode HOST_CODE(int i) {
            return getToken(SkadiParser.HOST_CODE, i);
        }

        public RuleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rule;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitRule(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RuleContext rule_() throws RecognitionException {
        RuleContext _localctx = new RuleContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_rule);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(104);
                regex();
                setState(108);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == HOST_CODE) {
                    {
                        {
                            setState(105);
                            match(HOST_CODE);
                        }
                    }
                    setState(110);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(111);
                match(ACTION_END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class User_codeContext extends ParserRuleContext {
        public User_codeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_user_code;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitUser_code(this);
            else return visitor.visitChildren(this);
        }
    }

    public final User_codeContext user_code() throws RecognitionException {
        User_codeContext _localctx = new User_codeContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_user_code);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(116);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -2L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 34359738367L) != 0)) {
                    {
                        {
                            setState(113);
                            matchWildcard();
                        }
                    }
                    setState(118);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RegexContext extends ParserRuleContext {
        public List<AlternativeContext> alternative() {
            return getRuleContexts(AlternativeContext.class);
        }

        public AlternativeContext alternative(int i) {
            return getRuleContext(AlternativeContext.class, i);
        }

        public TerminalNode REGEX_END() {
            return getToken(SkadiParser.REGEX_END, 0);
        }

        public List<TerminalNode> VERT_BAR() {
            return getTokens(SkadiParser.VERT_BAR);
        }

        public TerminalNode VERT_BAR(int i) {
            return getToken(SkadiParser.VERT_BAR, i);
        }

        public RegexContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_regex;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitRegex(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RegexContext regex() throws RecognitionException {
        RegexContext _localctx = new RegexContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_regex);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(119);
                alternative();
                setState(124);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == VERT_BAR) {
                    {
                        {
                            setState(120);
                            match(VERT_BAR);
                            setState(121);
                            alternative();
                        }
                    }
                    setState(126);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(127);
                match(REGEX_END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Inner_regexContext extends ParserRuleContext {
        public List<AlternativeContext> alternative() {
            return getRuleContexts(AlternativeContext.class);
        }

        public AlternativeContext alternative(int i) {
            return getRuleContext(AlternativeContext.class, i);
        }

        public List<TerminalNode> VERT_BAR() {
            return getTokens(SkadiParser.VERT_BAR);
        }

        public TerminalNode VERT_BAR(int i) {
            return getToken(SkadiParser.VERT_BAR, i);
        }

        public Inner_regexContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_inner_regex;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitInner_regex(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Inner_regexContext inner_regex() throws RecognitionException {
        Inner_regexContext _localctx = new Inner_regexContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_inner_regex);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(129);
                alternative();
                setState(134);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == VERT_BAR) {
                    {
                        {
                            setState(130);
                            match(VERT_BAR);
                            setState(131);
                            alternative();
                        }
                    }
                    setState(136);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AlternativeContext extends ParserRuleContext {
        public List<TermContext> term() {
            return getRuleContexts(TermContext.class);
        }

        public TermContext term(int i) {
            return getRuleContext(TermContext.class, i);
        }

        public AlternativeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_alternative;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitAlternative(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AlternativeContext alternative() throws RecognitionException {
        AlternativeContext _localctx = new AlternativeContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_alternative);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(140);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 566580274528244L) != 0)) {
                    {
                        {
                            setState(137);
                            term();
                        }
                    }
                    setState(142);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TermContext extends ParserRuleContext {
        public AtomContext atom() {
            return getRuleContext(AtomContext.class, 0);
        }

        public QuantifierContext quantifier() {
            return getRuleContext(QuantifierContext.class, 0);
        }

        public AssertionContext assertion() {
            return getRuleContext(AssertionContext.class, 0);
        }

        public TermContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_term;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitTerm(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TermContext term() throws RecognitionException {
        TermContext _localctx = new TermContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_term);
        try {
            setState(148);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(143);
                    atom();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(144);
                    atom();
                    setState(145);
                    quantifier();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(147);
                    assertion();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AssertionContext extends ParserRuleContext {
        public TerminalNode CIRCUMFLEX() {
            return getToken(SkadiParser.CIRCUMFLEX, 0);
        }

        public TerminalNode DOLLAR() {
            return getToken(SkadiParser.DOLLAR, 0);
        }

        public TerminalNode BACKSLASH() {
            return getToken(SkadiParser.BACKSLASH, 0);
        }

        public TerminalNode CH_b() {
            return getToken(SkadiParser.CH_b, 0);
        }

        public TerminalNode CH_B() {
            return getToken(SkadiParser.CH_B, 0);
        }

        public AssertionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assertion;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SkadiParserVisitor)
                return ((SkadiParserVisitor<? extends T>) visitor).visitAssertion(this);
            else return visitor.visitChildren(this);
        }
    }
